# Desktop-helper-project

./: Dockerfile  README.md  calories_calculator.py  currency_checker.py  main.py  pyproject.toml  requirement  requirements.txt  setup.py  styles.py  test.py  weather_forecast.py
CALC/: calc.py  main_calc.py
addressbook/: address_book.py  address_book_data.csv  classes.py  your_helper.py
calculator/: calc.py  fact_num.py  main_calc.py
notebook/: classes.py  notebook.json  notebook.py
sortfolder/: classes.py  sortfolder.py
translator/: classes.py  translator.py
yourhelper/: calories_calculator.py  currency_checker.py  main.py  weather_forecast.py
yourhelper/addressbook/: address_book.py  address_book_data.csv  classes.py
yourhelper/calculator/: main_calc.py
yourhelper/notebook/: classes.py  notebook.py
yourhelper/sortfolder/: classes.py  sortfolder.py
yourhelper/translator/: classes.py  translator.py
