[tool.poetry]
name = "yourhelper"
version = "0.1.0"
description = "YourHelper is a command-line utility with various useful tools and applications."
authors = ["Sergiy-Glookh <sglookh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
requests = "2.31.0"
tabulate = "0.9.0"
translate = "3.6.1"
py7zr = "0.20.6"
translators = "5.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
